# lidar-object-detection

./: CMakeLists.txt  LICENSE  README.md
src/: environment.cpp  kdtree.h  main.cpp  processPointClouds.cpp  processPointClouds.h
src/render/: render.cpp  render.h
src/sensors/: lidar.h
